--- a/Pagination/pagination.htm
+++ b/Pagination/pagination.htm
@@ -26,26 +26,26 @@
 <script>
     let jsp_current_page = 1;
     let jsp_json_object = [
-    { json_item: "Item 1"},
-    { json_item: "Item 2"},
-    { json_item: "Item 3"},
-    { json_item: "Item 4"},
-    { json_item: "Item 5"},
-    { json_item: "Item 6"},
-    { json_item: "Item 7"},
-    { json_item: "Item 8"},
-    { json_item: "Item 9"},
-    { json_item: "Item 10"},
-    { json_item: "Item 11"},
-    { json_item: "Item 12"},
-    { json_item: "Item 13"},
-    { json_item: "Item 14"},
-    { json_item: "Item 15"},
-    { json_item: "Item 16"},
-    { json_item: "Item 17"},
-    { json_item: "Item 18"},
-    { json_item: "Item 19"},
-    { json_item: "Item 20"},
+    { json_item: "Vigneshwaran"},
+    { json_item: "Aashiq"},
+    { json_item: "Amirdharsan"},
+    { json_item: "vijay"},
+    { json_item: "Samson"},
+    { json_item: "Jason abishek"},
+    { json_item: "Natrajan"},
+    { json_item: "Ashwin"},
+    { json_item: "Akash"},
+    { json_item: "Robin"},
+    { json_item: "Pavan"},
+    { json_item: "Revanth"},
+    { json_item: "Aakash"},
+    { json_item: "Aslam"},
+    { json_item: "pratham"},
+    { json_item: "calvin"},
+    { json_item: "Arun"},
+    { json_item: "Arun yuvi"},
+    { json_item: "samuel"},
+    { json_item: "paras"},
 ];
 const jsp_records_per_page = jsp_json_object.length/4;
 
